src/test/ui/rfc1598-generic-associated-types/parameter_number_and_kind.stderr
error[E0110]: lifetime parameters are not allowed on this type
  --> $DIR/parameter_number_and_kind.rs:26:27
   |
LL |     type FOk<T> = Self::E<'static, T>;
   |                           ^^^^^^^ lifetime parameter not allowed

error[E0109]: type parameters are not allowed on this type
  --> $DIR/parameter_number_and_kind.rs:26:36
   |
LL |     type FOk<T> = Self::E<'static, T>;
   |                                    ^ type parameter not allowed

error[E0110]: lifetime parameters are not allowed on this type
  --> $DIR/parameter_number_and_kind.rs:29:26
   |
LL |     type FErr1 = Self::E<'static, 'static>; // Error
   |                          ^^^^^^^ lifetime parameter not allowed

error[E0110]: lifetime parameters are not allowed on this type
  --> $DIR/parameter_number_and_kind.rs:31:29
   |
LL |     type FErr2<T> = Self::E<'static, T, u32>; // Error
   |                             ^^^^^^^ lifetime parameter not allowed

error[E0109]: type parameters are not allowed on this type
  --> $DIR/parameter_number_and_kind.rs:31:38
   |
LL |     type FErr2<T> = Self::E<'static, T, u32>; // Error
   |                                      ^ type parameter not allowed

error: aborting due to 5 previous errors

Some errors occurred: E0109, E0110.
For more information about an error, try `rustc --explain E0109`.
